--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_USER=admin
 DB_PASS=admin
 DB_PORT=127.0.0.1:27017
 DB_NAME=Magic:The-Gathering-Archive
+DB_COLLECTION_ALLCARDS=allCards
+DB_COLLECTION_MYCARDS=myCards
