test which git acc is signed in on this machine

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=Magic:The-Gathering-Archive
 DB_COLLECTION_ALLCARDS=allCards
 DB_COLLECTION_MYCARDS=myCards
 DB_COLLECTION_SETIMAGES=imgInfo
+TEST=test
